Fixed spacing issue on dayView

--- a/schedule.css
+++ b/schedule.css
@@ -165,6 +165,7 @@
   display: flex;
   justify-content: flex-start;
   flex: 1;
+  margin-top: 2rem;
 }
 
 .weekGrid{
